[gd_scene load_steps=6 format=2]

[ext_resource path="res://asteriod.png" type="Texture" id=1]
[ext_resource path="res://Asteriod.gd" type="Script" id=2]
[ext_resource path="res://AsteroidDieParticle.tscn" type="PackedScene" id=3]

[sub_resource type="CircleShape2D" id=1]
radius = 18.4391

[sub_resource type="CircleShape2D" id=2]
radius = 22.0227

[node name="Asteroid" type="KinematicBody2D"]
collision_layer = 4
collision_mask = 3
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 3

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 2 )

[node name="Timer" type="Timer" parent="."]

[node name="Particles2D" parent="." instance=ExtResource( 3 )]

[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
